tests/errors/no-guarantee.fil
component Main<T>(
  in: 32
) -> (
  @[T, T+1] out: 32,
) {
  out = in;
}
